--- a/Gatekeep/src/GateKeep.Api/appsettings.json
+++ b/Gatekeep/src/GateKeep.Api/appsettings.json
@@ -5,9 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-
-  "Pricing": {
-    "DiscountRate": 0.05
-  }
+  "AllowedHosts": "*"
+  
 }
