--- a/Gatekeep/src/GateKeep.Api/GateKeep.Api.csproj
+++ b/Gatekeep/src/GateKeep.Api/GateKeep.Api.csproj
@@ -12,4 +12,12 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.*" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Application\" />
+    <Folder Include="Contacts\" />
+    <Folder Include="Domain\" />
+    <Folder Include="Endpoints\" />
+    <Folder Include="Infrastructure\" />
+  </ItemGroup>
+
 </Project>
