Configuration and database PostgresSql

--- a/Gatekeep/src/GateKeep.Api/appsettings.Development.json
+++ b/Gatekeep/src/GateKeep.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Postgres": "Host=localhost;Port=5432;Database=Gatekeep;Username=postgres;Password=897888fg2"
   }
 }
