--- a/Gatekeep/src/GateKeep.Api/Properties/launchSettings.json
+++ b/Gatekeep/src/GateKeep.Api/Properties/launchSettings.json
@@ -6,7 +6,8 @@
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5011",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ConnectionStrings__Postgres": "Host=localhost;Port=5432;Database=Gatekeep;Username=postgres;Password=897888fg2"
       }
     }
   }
