--- a/Gatekeep/src/GateKeep.Api/appsettings.Development.json
+++ b/Gatekeep/src/GateKeep.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "Postgres": "Host=localhost;Port=5432;Database=Gatekeep;Username=postgres;Password=897888fg2"
+    "Postgres": "Host=${database:host};Port=${database:port};Database=${database:name};Username=${database:user};Password=${database:password};"
   }
 }
