--- a/Gatekeep/src/GateKeep.Api/config.json
+++ b/Gatekeep/src/GateKeep.Api/config.json
@@ -6,6 +6,11 @@
     "user": "postgres",
     "password": "897888fg2"
   },
+  "mongodb": {
+    "connectionString": "mongodb+srv://adriambonjour2015_db_user:XRvJsYWO51XK8vvW@gatekeepmongo.py5i1x4.mongodb.net/?appName=GateKeepMongo",
+    "databaseName": "GateKeepMongo",
+    "useStableApi": true
+  },
   "application": {
     "environment": "Development",
     "urls": "http://localhost:5011"
