--- a/Gatekeep/src/GateKeep.Api/appsettings.Development.json
+++ b/Gatekeep/src/GateKeep.Api/appsettings.Development.json
@@ -1,11 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "database": {
+        "host": "localhost",
+        "port": "5432",
+        "name": "Gatekeep",
+        "user": "postgres",
+        "password": "897888fg2"
     }
-  },
-  "ConnectionStrings": {
-    "Postgres": "Host=${database:host};Port=${database:port};Database=${database:name};Username=${database:user};Password=${database:password};"
-  }
 }
