--- a/Gatekeep/src/GateKeep.Api/appsettings.json
+++ b/Gatekeep/src/GateKeep.Api/appsettings.json
@@ -1,10 +1,42 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
-  
+    "Serilog": {
+        "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Seq"],
+        "MinimumLevel": {
+            "Default": "Information",
+            "Override": {
+                "Microsoft": "Warning",
+                "Microsoft.AspNetCore": "Warning",
+                "Microsoft.EntityFrameworkCore": "Warning",
+                "System": "Warning",
+                "GateKeep.Api": "Information"
+            }
+        },
+        "WriteTo": [{
+                "Name": "Console",
+                "Args": {
+                    "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
+                }
+            },
+            {
+                "Name": "File",
+                "Args": {
+                    "path": "logs/gatekeep-.log",
+                    "rollingInterval": "Day",
+                    "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] [{SourceContext}] {Message:lj} {Properties:j}{NewLine}{Exception}",
+                    "retainedFileCountLimit": 7
+                }
+            },
+            {
+                "Name": "Seq",
+                "Args": {
+                    "serverUrl": "http://localhost:5341"
+                }
+            }
+        ],
+        "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId", "WithEnvironmentName"],
+        "Properties": {
+            "Application": "GateKeep.Api"
+        }
+    },
+    "AllowedHosts": "*"
 }
