--- a/Gatekeep/src/GateKeep.Api/appsettings.Development.json
+++ b/Gatekeep/src/GateKeep.Api/appsettings.Development.json
@@ -10,6 +10,6 @@
         "port": "5432",
         "name": "Gatekeep",
         "user": "postgres",
-        "password": "897888fg2"
+        "password": "1234"
     }
 }
