--- a/Gatekeep/src/GateKeep.Api/config.example.json
+++ b/Gatekeep/src/GateKeep.Api/config.example.json
@@ -4,10 +4,10 @@
         "port": "5432",
         "name": "Gatekeep",
         "user": "postgres",
-        "password": "1234"
+        "password": "TU_CONTRASEÑA_AQUI"
     },
     "mongodb": {
-        "connectionString": "mongodb+srv://adriambonjour2015_db_user:XRvJsYWO51XK8vvW@gatekeepmongo.py5i1x4.mongodb.net/?appName=GateKeepMongo",
+        "connectionString": "mongodb+srv://USER:PASSWORD@HOST/?appName=GateKeepMongo",
         "databaseName": "GateKeepMongo",
         "useStableApi": true
     },
