--- a/Gatekeep/src/GateKeep.Api/config.Production.json
+++ b/Gatekeep/src/GateKeep.Api/config.Production.json
@@ -1,10 +1,10 @@
 {
     "database": {
-        "host": "db",
+        "host": "postgres",
         "port": "5432",
         "name": "Gatekeep",
         "user": "postgres",
-        "password": "1234"
+        "password": ""
     },
     "mongodb": {
         "connectionString": "mongodb+srv://adriambonjour2015_db_user:XRvJsYWO51XK8vvW@gatekeepmongo.py5i1x4.mongodb.net/?appName=GateKeepMongo",
