--- a/Gatekeep/src/docker-compose.yml
+++ b/Gatekeep/src/docker-compose.yml
@@ -3,20 +3,20 @@ networks:
     driver: bridge
 
 services:
-  db:
+  postgres:
     image: postgres:16-alpine
     container_name: gatekeep-postgres
     restart: unless-stopped
     environment:
-      POSTGRES_DB: "Gatekeep"
-      POSTGRES_USER: "postgres"
-      POSTGRES_PASSWORD: "1234"
+      POSTGRES_DB: ${DB_NAME:-Gatekeep}
+      POSTGRES_USER: ${DB_USER:-postgres}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
     ports:
-      - "5432:5432"
+      - "${DB_PORT:-5432}:5432"
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d Gatekeep"]
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-postgres} -d ${DB_NAME:-Gatekeep}"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -30,13 +30,78 @@ services:
     ports:
       - "6379:6379"
     volumes:
-      - redisdata:/data
+      - redis_data:/data
     command: ["redis-server", "--appendonly", "yes"]
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      - gatekeep-network
+
+  seq:
+    image: datalust/seq:latest
+    container_name: gatekeep-seq
+    restart: unless-stopped
+    ports:
+      - "5341:80"
+    volumes:
+      - seq_data:/data
+    environment:
+      - ACCEPT_EULA=Y
+    healthcheck:
+      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:80/api || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - gatekeep-network
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: gatekeep-prometheus
+    restart: unless-stopped
+    ports:
+      - "9090:9090"
+    volumes:
+      - prometheus_data:/prometheus
+      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+      - '--web.console.templates=/usr/share/prometheus/consoles'
+    healthcheck:
+      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:9090/-/healthy || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    networks:
+      - gatekeep-network
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: gatekeep-grafana
+    restart: unless-stopped
+    ports:
+      - "3001:3000"
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./monitoring/grafana/provisioning:/etc/grafana/provisioning:ro
+      - ./monitoring/grafana/dashboards:/var/lib/grafana/dashboards:ro
+    environment:
+      - GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER:-admin}
+      - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD:-admin}
+      - GF_INSTALL_PLUGINS=
+    depends_on:
+      prometheus:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3000/api/health || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
     networks:
       - gatekeep-network
 
@@ -47,21 +112,34 @@ services:
     container_name: gatekeep-api
     restart: on-failure
     environment:
-      ASPNETCORE_ENVIRONMENT: "Production"
-      ASPNETCORE_URLS: "http://+:5011"
-      DATABASE__HOST: "db"
-      DATABASE__PORT: "5432"
-      DATABASE__NAME: "Gatekeep"
-      DATABASE__USER: "postgres"
-      DATABASE__PASSWORD: "1234"
-      REDIS__CONNECTIONSTRING: "redis:6379"
-      REDIS__INSTANCENAME: "GateKeep:"
+      ASPNETCORE_ENVIRONMENT: ${APP_ENVIRONMENT:-Production}
+      ASPNETCORE_URLS: "http://+:${GATEKEEP_PORT:-5011}"
+      DATABASE__HOST: ${DB_HOST:-postgres}
+      DATABASE__PORT: ${DB_PORT:-5432}
+      DATABASE__NAME: ${DB_NAME:-Gatekeep}
+      DATABASE__USER: ${DB_USER:-postgres}
+      DATABASE__PASSWORD: ${DB_PASSWORD}
+      REDIS__CONNECTIONSTRING: ${REDIS_CONNECTION:-redis:6379}
+      REDIS__INSTANCENAME: ${REDIS_INSTANCE:-GateKeep:}
+      REDIS__ENABLED: ${REDIS_ENABLED:-true}
+      MONGODB_CONNECTION: ${MONGODB_CONNECTION:-}
+      MONGODB_DATABASE: ${MONGODB_DATABASE:-GateKeepMongo}
+      MONGODB_USE_STABLE_API: ${MONGODB_USE_STABLE_API:-false}
+      JWT__KEY: ${JWT_KEY}
+      JWT__ISSUER: ${JWT_ISSUER:-GateKeep}
+      JWT__AUDIENCE: ${JWT_AUDIENCE:-GateKeepUsers}
+      JWT__EXPIRATIONHOURS: ${JWT_EXPIRATION_HOURS:-8}
+      SECURITY__PASSWORDMINLENGTH: ${SECURITY_PASSWORD_MIN_LENGTH:-8}
+      SECURITY__MAXLOGINATTEMPTS: ${SECURITY_MAX_LOGIN_ATTEMPTS:-5}
+      SECURITY__LOCKOUTDURATIONMINUTES: ${SECURITY_LOCKOUT_DURATION_MINUTES:-15}
     ports:
-      - "5011:5011"
+      - "${GATEKEEP_PORT:-5011}:${GATEKEEP_PORT:-5011}"
     depends_on:
-      db:
+      postgres:
         condition: service_healthy
       redis:
+        condition: service_healthy
+      seq:
         condition: service_healthy
     networks:
       - gatekeep-network
@@ -77,7 +155,13 @@ services:
     #   - ./GateKeep.Api/appsettings.Production.json:/app/appsettings.Production.json:ro
 
 volumes:
-  pgdata:
+  postgres_data:
     driver: local
-  redisdata:
+  redis_data:
+    driver: local
+  seq_data:
+    driver: local
+  prometheus_data:
+    driver: local
+  grafana_data:
     driver: local
