--- a/Gatekeep/frontend/package.json
+++ b/Gatekeep/frontend/package.json
@@ -11,7 +11,10 @@
     },
     "dependencies": {
         "axios": "^1.13.2",
+        "dexie": "^4.2.1",
+        "idb": "^8.0.3",
         "next": "^15.5.6",
+        "next-pwa": "^5.6.0",
         "primeflex": "^4.0.0",
         "primeicons": "^7.0.0",
         "primereact": "^10.9.4",
