Aws test services

--- a/Gatekeep/src/docker-compose.yml
+++ b/Gatekeep/src/docker-compose.yml
@@ -134,6 +134,9 @@ services:
       SECURITY__PASSWORDMINLENGTH: ${SECURITY_PASSWORD_MIN_LENGTH:-8}
       SECURITY__MAXLOGINATTEMPTS: ${SECURITY_MAX_LOGIN_ATTEMPTS:-5}
       SECURITY__LOCKOUTDURATIONMINUTES: ${SECURITY_LOCKOUT_DURATION_MINUTES:-15}
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID:-}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY:-}
+      AWS_REGION: ${AWS_REGION:-sa-east-1}
     ports:
       - "${GATEKEEP_PORT:-5011}:${GATEKEEP_PORT:-5011}"
     depends_on:
