--- a/Gatekeep/src/GateKeep.Api/GateKeep.Api.csproj
+++ b/Gatekeep/src/GateKeep.Api/GateKeep.Api.csproj
@@ -54,6 +54,11 @@
     
     <!-- Paquetes de Observabilidad - Prometheus -->
     <PackageReference Include="prometheus-net.AspNetCore" Version="8.2.1" />
+    
+    <!-- Paquetes AWS SDK -->
+    <PackageReference Include="AWSSDK.Core" Version="3.7.400.42" />
+    <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.400.42" />
+    <PackageReference Include="AWSSDK.SimpleSystemsManagement" Version="3.7.401" />
   </ItemGroup>
 
   <ItemGroup>
