todo funca menos notificacionesEnpoints

--- a/Gatekeep/src/GateKeep.Api/appsettings.json
+++ b/Gatekeep/src/GateKeep.Api/appsettings.json
@@ -38,5 +38,17 @@
             "Application": "GateKeep.Api"
         }
     },
+    "RabbitMQ": {
+        "Host": "localhost",
+        "Port": 5672,
+        "Username": "guest",
+        "Password": "guest",
+        "VirtualHost": "/",
+        "RetryCount": 3,
+        "InitialIntervalSeconds": 5,
+        "IntervalIncrementSeconds": 10,
+        "EnableDLQ": true,
+        "DLQMessageTTLDays": 7
+    },
     "AllowedHosts": "*"
 }
