--- a/Gatekeep/src/.env.example
+++ b/Gatekeep/src/.env.example
@@ -1,57 +1,50 @@
-﻿# Configuración Docker de GateKeep
-# Copia este archivo a .env y configura tus valores reales
-# IMPORTANTE: Nunca subas el archivo .env al control de versiones
-
-# ============================================
-# PostgreSQL
-# ============================================
+﻿# ==============================================
+# POSTGRESQL - Base de Datos Principal
+# ==============================================
 DB_HOST=postgres
-DB_PORT=5432
+DB_PORT=5433
 DB_NAME=Gatekeep
 DB_USER=postgres
-DB_PASSWORD=tu_contraseña_segura_aqui
+DB_PASSWORD=renzonehuen
 
-# ============================================
-# MongoDB (opcional - para notificaciones y auditoría)
-# ============================================
-# Si usas MongoDB Atlas, usa la cadena de conexión completa
-# Si usas MongoDB local, usa: mongodb://localhost:27017
-MONGODB_CONNECTION=mongodb+srv://user:pass@host/?appName=GateKeepMongo
+# ==============================================
+# MONGODB - Base de Datos de Documentos
+# ==============================================
+MONGODB_CONNECTION=mongodb+srv://adriambonjour2015_db_user:XRvJsYWO51XK8vvW@gatekeepmongo.py5i1x4.mongodb.net/?appName=GateKeepMongo                            
 MONGODB_DATABASE=GateKeepMongo
 MONGODB_USE_STABLE_API=true
 
-# ============================================
-# Redis
-# ============================================
+# ==============================================
+# REDIS - Sistema de Cache
+# ==============================================
 REDIS_CONNECTION=redis:6379
 REDIS_INSTANCE=GateKeep:
 REDIS_ENABLED=true
 
-# ============================================
-# API
-# ============================================
-APP_ENVIRONMENT=Production
+# ==============================================
+# API - Configuracion General
+# ==============================================
 GATEKEEP_PORT=5011
+APP_ENVIRONMENT=Production
 
-# ============================================
-# JWT (Seguridad)
-# ============================================
-# IMPORTANTE: Usa una clave secreta de al menos 256 bits (32 caracteres mínimo)
-# Genera una clave segura: openssl rand -base64 32
-JWT_KEY=clave-secreta-muy-larga-minimo-256-bits-cambiar-en-produccion
+# ==============================================
+# JWT - Autenticacion y Tokens
+# ==============================================
+JWT_KEY=GateKeep-Secret-Key-Very-Long-And-Secure-256-Bits-Minimum-Length-Required                                                                               
 JWT_ISSUER=GateKeep
 JWT_AUDIENCE=GateKeepUsers
 JWT_EXPIRATION_HOURS=8
 
-# ============================================
-# Security (Configuración de seguridad)
-# ============================================
+# ==============================================
+# SECURITY - Seguridad de la Aplicacion
+# ==============================================
 SECURITY_PASSWORD_MIN_LENGTH=8
 SECURITY_MAX_LOGIN_ATTEMPTS=5
 SECURITY_LOCKOUT_DURATION_MINUTES=15
 
-# ============================================
-# Grafana (Opcional - para monitoreo)
-# ============================================
-GF_SECURITY_ADMIN_USER=admin
-GF_SECURITY_ADMIN_PASSWORD=admin
+# ==============================================
+# AWS - Credenciales y Configuracion
+# ==============================================
+AWS_ACCESS_KEY_ID=AKIAX7NAHD4GOVJLTN5T
+AWS_SECRET_ACCESS_KEY=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
+AWS_REGION=sa-east-1
