--- a/Gatekeep/frontend/package.json
+++ b/Gatekeep/frontend/package.json
@@ -20,15 +20,23 @@
         "primereact": "^10.9.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^7.9.4"
+        "react-router-dom": "^7.9.4",
+        "sql.js": "^1.13.0"
     },
     "devDependencies": {
         "@svgr/webpack": "^8.1.0",
+        "@testing-library/jest-dom": "^6.9.1",
+        "@testing-library/react": "^16.3.0",
+        "@types/jest": "^30.0.0",
         "@types/react": "^18.2.64",
         "@types/react-dom": "^18.2.21",
+        "@types/sql.js": "^1.4.9",
+        "cypress": "^15.6.0",
         "eslint": "^8.57.0",
         "eslint-plugin-react": "^7.34.0",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-react-refresh": "^0.4.5"
+        "eslint-plugin-react-refresh": "^0.4.5",
+        "jest-environment-jsdom": "^30.2.0",
+        "ts-jest": "^29.4.5"
     }
 }
