--- a/Gatekeep/frontend/package.json
+++ b/Gatekeep/frontend/package.json
@@ -7,7 +7,9 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "test:offline": "cypress run --spec cypress/e2e/offline_sync.cy.ts",
+        "postinstall": "node scripts/copy-wasm.js"
     },
     "dependencies": {
         "axios": "^1.13.2",
