--- a/Gatekeep/frontend/package.json
+++ b/Gatekeep/frontend/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "axios": "^1.13.2",
         "dexie": "^4.2.1",
+        "html5-qrcode": "^2.3.8",
         "idb": "^8.0.3",
         "next": "^15.5.6",
         "next-pwa": "^5.6.0",
@@ -26,6 +27,7 @@
         "sql.js": "^1.13.0"
     },
     "devDependencies": {
+        "@bubblewrap/cli": "^1.24.1",
         "@svgr/webpack": "^8.1.0",
         "@testing-library/jest-dom": "^6.9.1",
         "@testing-library/react": "^16.3.0",
