--- a/Gatekeep/frontend/Dockerfile
+++ b/Gatekeep/frontend/Dockerfile
@@ -10,6 +10,9 @@ ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
 # Copy package files
 COPY package*.json ./
 
+# Copy scripts for postinstall
+COPY scripts ./scripts
+
 # Install dependencies
 RUN npm ci
 
@@ -26,6 +29,9 @@ WORKDIR /app
 
 # Copy package files
 COPY package*.json ./
+
+# Copy scripts for postinstall
+COPY scripts ./scripts
 
 # Install only production dependencies
 RUN npm ci --only=production
