--- a/Gatekeep/frontend/public/manifest.json
+++ b/Gatekeep/frontend/public/manifest.json
@@ -8,6 +8,9 @@
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#0066cc",
+  "dir": "ltr",
+  "lang": "es",
+  "prefer_related_applications": false,
   "orientation": "portrait-primary",
   "categories": ["business", "productivity"],
   "display_override": ["standalone", "fullscreen"],
