--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -76,7 +76,9 @@ services:
     restart: unless-stopped
     environment:
       NODE_ENV: production
-      NEXT_PUBLIC_API_URL: http://localhost:5011
+      # Con nginx, el frontend debe usar http://localhost (nginx enruta /api/ al backend)
+      # Sin nginx, usar http://localhost:5011 directamente
+      NEXT_PUBLIC_API_URL: http://localhost
     ports:
       - "3000:3000"
     depends_on:
