For testing rabbit

--- a/Gatekeep/src/GateKeep.Api/appsettings.json
+++ b/Gatekeep/src/GateKeep.Api/appsettings.json
@@ -44,6 +44,9 @@
         "Username": "guest",
         "Password": "guest",
         "VirtualHost": "/",
+        "UseSsl": false,
+        "ManagementPort": 15672,
+        "UseHttps": false,
         "RetryCount": 3,
         "InitialIntervalSeconds": 5,
         "IntervalIncrementSeconds": 10,
