--- a/Gatekeep/src/GateKeep.Api/appsettings.Production.json
+++ b/Gatekeep/src/GateKeep.Api/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
     "Serilog": {
-        "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Seq"],
+        "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File"],
         "MinimumLevel": {
             "Default": "Information",
             "Override": {
@@ -24,12 +24,6 @@
                     "rollingInterval": "Day",
                     "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] [{SourceContext}] {Message:lj} {Properties:j}{NewLine}{Exception}",
                     "retainedFileCountLimit": 7
-                }
-            },
-            {
-                "Name": "Seq",
-                "Args": {
-                    "serverUrl": "http://seq:80"
                 }
             }
         ],
